Fix footer layout issues

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -362,93 +362,95 @@ html {
   align-items: center;
 
   width: 100%;
-  height: 50vh;
-  padding: 3% 8%;
-  padding-bottom: 1%;
+  height: auto;
+  padding: auto 8%;
   background-color: #333;
 
-  .footer--content-container {
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
-    z-index: 1;
-    margin-top: -1rem;
-
-    .footer--content-title {
-      color: #fff;
-      font-size: 4rem;
-    }
-
-    .footer--content-subtitle {
-      color: rgb(232, 232, 232);
-      font-size: 3rem;
-      @include ff-sourcesans();
-      margin-top: -1rem;
-    }
-
-    .btn--footer {
-      width: 23rem;
-      padding: 1rem 3rem;
-      border-radius: 0.1em;
-      margin-top: 2rem;
-
-      text-align: center;
-      font-size: 2rem;
-      text-transform: uppercase;
-      font-weight: 700;
-
-      background-color: $primary-color;
-      color: #fff;
-
-      &:hover {
-        background-color: $primary-color-dark;
-      }
-
-      &:active {
-        background-color: $primary-color;
-      }
-    }
-
-    .footer--copyright {
-      margin-top: 6rem;
-      color: rgb(140, 140, 140);
-      font-size: 1.6rem;
-      letter-spacing: 0.08rem;
-    }
-  }
-
-  .footer--section-links {
-    // border: 2px solid greenyellow;
+  .content--wrapper {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    gap: 3rem;
-    padding-top: 1rem;
-  }
+    align-items: center;
+    flex-direction: column;
 
-  i {
-    color: rgb(140, 140, 140);
-    font-size: 3rem;
-    transition: color 0.15s ease-in-out;
+    .footer--content-container {
+      opacity: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding-top: 5rem;
+      padding-bottom: 6rem;
 
-    &:hover {
-      color: #ffffff;
+      .footer--content-title {
+        color: #fff;
+        font-size: 4rem;
+      }
+
+      .footer--content-subtitle {
+        color: rgb(232, 232, 232);
+        font-size: 3rem;
+        @include ff-sourcesans();
+        margin-top: -1rem;
+      }
+
+      .btn--footer {
+        width: 23rem;
+        padding: 1rem 3rem;
+        border-radius: 0.1em;
+        margin-top: 3rem;
+
+        text-align: center;
+        font-size: 2rem;
+        text-transform: uppercase;
+        font-weight: 700;
+
+        background-color: $primary-color;
+        color: #fff;
+
+        &:hover {
+          background-color: $primary-color-dark;
+        }
+
+        &:active {
+          background-color: $primary-color;
+        }
+      }
     }
-  }
 
-  .footer--section-bg {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 0;
-    background-color: rgb(29, 29, 29);
-    width: 100%;
-    height: 33%;
+    .footer--section-links {
+      background-color: rgb(18, 18, 18);
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 3rem 0;
+
+      .footer--copyright {
+        color: rgb(140, 140, 140);
+        font-size: 1.6rem;
+        letter-spacing: 0.08rem;
+        padding-bottom: 1.2rem;
+      }
+
+      .social--icons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 3rem;
+
+        i {
+          font-size: 3rem;
+          color: rgb(140, 140, 140);
+          transition: color 0.15s ease-in-out;
+
+          &:hover {
+            color: #ffffff;
+          }
+        }
+      }
+    }
   }
 }
 
